<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/action_overview" />

        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/action_accounts" />

        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_insert_chart_black"
            android:title="@string/action_charts" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/action_reports" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    <group android:id="@+id/nav_group2">

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_log_out" />
    </group>


</menu>
