<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gw.presentation.view.fragment.OverviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_button_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="2dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_chart_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/balance_chart_name"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark_blue_gray"
                    android:textSize="13sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_balance"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/balance_label"
                    android:textAlignment="textStart"
                    android:textColor="@color/dark_blue_gray"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_balance"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="5"
                    android:text="0 UAH"
                    android:textAlignment="center"
                    android:textColor="@color/blueTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/label_index"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/index_label"
                    android:textColor="@color/dark_blue_gray"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_index"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="3.1/10"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_transactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/transactions_label"
                    android:textColor="@color/dark_blue_gray"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal"
                        android:paddingRight="10dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            app:srcCompat="@drawable/ic_arrow_up_green" />

                        <TextView
                            android:id="@+id/tv_income"
                            style="@style/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="0 UAH"
                            android:textColor="@color/gray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            app:srcCompat="@drawable/ic_arrow_down_red" />

                        <TextView
                            android:id="@+id/tv_expence"
                            style="@style/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numeric="decimal"
                            android:paddingLeft="10dp"
                            android:text="0 UAH"
                            android:textColor="@color/gray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tip_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"

                    android:paddingLeft="5dp"
                    android:text="@string/tip_label"
                    android:textColor="@color/dark_blue_gray"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/tip_entertainment"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/main_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_forecast"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"

                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/forecast"
                android:theme="@style/AppTheme.Button" />

            <Button
                android:id="@+id/btn_decision"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/decisionItem"
                android:theme="@style/AppTheme.Button" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
