<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gw.presentation.view.fragment.AmountDecisionFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tvAmountTitle"
                        style="@style/decision_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="86dp"

                        android:layout_weight="0.88"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/amount_fragment_title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="15dp"
                            android:text="@string/from"
                            android:textColor="@color/dark_blue_gray"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/etFrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:ems="10"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:nextFocusDown="@+id/etTo"
                            android:paddingRight="0dp"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="15dp"
                            android:text="@string/to"
                            android:textColor="@color/dark_blue_gray"

                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/etTo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:ems="10"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:paddingRight="0dp"
                            android:textSize="24sp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
