<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forecast_tab_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/forecast_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/forecast_lout_info"
            android:layout_below="@+id/forecast_tab_name"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:id="@+id/forecast_lout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingTop="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/layout_padding"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/forecast_label_current"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:paddingRight="16dp"
                    android:text="@string/current_balance"
                    android:textAlignment="textEnd"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forecast_tv_current_value"
                        style="@style/text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:text="0"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="UAH"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/layout_padding"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/forecast_label_expected"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:paddingRight="16dp"
                    android:text="@string/expected_balance"
                    android:textAlignment="textEnd"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forecast_tv_expected_value"
                        style="@style/text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:numeric="decimal"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:text="0"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_currency1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingRight="5dp"
                        android:text="UAH"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="6"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:paddingRight="16dp"
                    android:text="@string/trend"
                    android:textAlignment="textEnd" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:id="@+id/forecast_trend_arrow"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_arrow_up_green" />

                    <TextView
                        android:id="@+id/forecast_trend_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="4dp"
                        android:text="9.21%"
                        android:textColor="@color/green_arrow"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"

                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:id="@+id/forecast_tip_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="6"
                    android:gravity="right|center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/forecast"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <TextView
                        android:id="@+id/forecast_tv_tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:paddingRight="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Text" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>